--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -358,9 +358,12 @@ on boot
     chmod 0664 /sys/class/mi_display/disp-DSI-1/max_brightness_clone
 
     #MIUI ADD:Thermal_NodeReq
+    chmod 0664 /sys/class/thermal/thermal_message/sconfig
     chown system system /sys/class/thermal/thermal_message/sconfig
+    chmod 0664 /sys/class/thermal/thermal_message/balance_mode
     chown system system /sys/class/thermal/thermal_message/balance_mode
     chown cameraserver cameraserver /sys/class/thermal/thermal_message/torch_real_level
+    chmod 0664 /sys/class/thermal/thermal_message/flash_state
     chown cameraserver cameraserver /sys/class/thermal/thermal_message/flash_state
     chown system system /sys/class/thermal/thermal_message/charger_temp
     chown system system /sys/class/thermal/power_save/powersave_mode
